# pkg/api/handlers/products.go
@@ -19,6 +19,16 @@ func NewProductHandler(usecase services.ProductUseCase) *ProductHandler {
 		productUseCase: usecase,
 	}
 }
+
+// @Summary Add a new product
+// @Description Creates a new product in the system
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param product body models.AddProduct true "Product Details"
+// @Success 200 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+// @Router /product [post]
 func (p *ProductHandler) AddProduct(c *gin.Context) {
 	var addproduct models.AddProduct
 	if err := c.ShouldBindJSON(&addproduct); err != nil {
@@ -36,6 +46,17 @@ func (p *ProductHandler) AddProduct(c *gin.Context) {
 	successRes := response.ClientResponse(http.StatusOK, "the product added successfully", products, nil)
 	c.JSON(http.StatusOK, successRes)
 }
+
+// @Summary Delete a product
+// @Description Deletes a product from the system by its ID
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param id query int true "Product ID"
+// @Success 200 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+// @Router /product/:id [delete]
 func (p *ProductHandler) DeleteProduct(c *gin.Context) {
 	ProductID, err := strconv.Atoi(c.Query("id"))
 	if err != nil {
@@ -52,6 +73,18 @@ func (p *ProductHandler) DeleteProduct(c *gin.Context) {
 	successRes := response.ClientResponse(http.StatusOK, "the product is deleted", nil, nil)
 	c.JSON(http.StatusOK, successRes)
 }
+
+// @Summary Update a product
+// @Description Updates an existing product in the system
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param id query int true "Product ID"
+// @Param product body models.ProductResponse true "Product Details"
+// @Success 200 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+
+// @Router /product/:id [put]
 func (p *ProductHandler) UpdateProduct(c *gin.Context) {
 	productID, err := strconv.Atoi(c.Query("id"))
 	if err != nil {
@@ -76,6 +109,18 @@ func (p *ProductHandler) UpdateProduct(c *gin.Context) {
 	c.JSON(http.StatusOK, successRes)
 
 }
+
+// @Summary List all products
+// @Description Retrieves a list of products based on pagination parameters
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param page query int true "Page number"
+// @Param count query int true "Number of items per page"
+// @Success 200 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+
+// @Router /products [get]
 func (p *ProductHandler) ListProduct(c *gin.Context) {
 	pagestr := c.Query("page")
 	page, err := strconv.Atoi(pagestr)
@@ -102,6 +147,16 @@ func (p *ProductHandler) ListProduct(c *gin.Context) {
 	c.JSON(http.StatusOK, successRes)
 }
 
+// @Summary Filter products by category
+// @Description Filters products based on the provided category information in JSON format
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param data body map[string]int true "Category information"
+// @Success 200 {object} response.Response{}
+// @Failure 400 {object} response.Response{}
+// @Failure 500 {object} response.Response{}
+// @Router /product/filter [post]
 func (p *ProductHandler) FilterCategory(c *gin.Context) {
 	var data map[string]int
 	if err := c.ShouldBindJSON(&data); err != nil {
@@ -118,6 +173,18 @@ func (p *ProductHandler) FilterCategory(c *gin.Context) {
 	successRes := response.ClientResponse(http.StatusOK, "Successfully filtered the category", productCategory, nil)
 	c.JSON(http.StatusOK, successRes)
 }
+
+//@Summary Search products by prefix
+//@Description Searches for products based on a prefix provided in JSON format
+//@Tags product
+//@Accept json
+//@Produce json
+//@Param searchItem body models.SearchItems true "Search Prefix"
+//@Success 200 {object} response.Response{}
+//@Failure 400 {object} response.Response{}
+//@Failure 500 {object} response.Response{}
+//@Router /product/search [post]
+
 func (p *ProductHandler) SearchProduct(c *gin.Context) {
 
 	var prefix models.SearchItems
